--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ backend/dist/
 .env.production.local
 frontend/.env*
 backend/.env*
+!backend/.env.example
+!frontend/.env.example
 
 # Logs
 *.log
